--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of expodiff is to ...
+The goal of expodiff is to provide an interactive exploration of World Expos and Specialised Expos data, allowing users to visualize and compare key metrics like attending countries, area size, visitors, and economic factors. The package includes a Shiny app that enables dynamic data exploration and interactive visualizations.
 
 ## Installation
 
@@ -35,21 +35,36 @@ This is a basic example which shows you how to solve a common problem:
 
 ```{r example}
 library(expodiff)
-## basic example code
+# Launch the Shiny app
+launch_expodiff()
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
+The Shiny app provides various visualizations and comparisons, such as:
 
-```{r cars}
-summary(cars)
+* Average attending countries over time for World and Specialised Expos.
+* Correlation between area size and number of visitors.
+* Top themes from Expos, ranked based on frequency.
+* Economic factors and scale comparisons between different types of Expos.
+
+## Data Summary
+
+The data behind the expodiff package includes:
+
+* World Expo and Specialised Expo data: covering attending countries, visitors, cost, area, and themes.
+
+* Interactive visualizations: using plotly and ggplot2 to create responsive and dynamic charts.
+
+* Economic analysis: a summary table comparing cost, visitors, and attending countries for World Expos and Specialised Expos.
+
+## Example of Data Summary
+
+You can summarize the built-in data sets:
+```{r}
+# Load the combined dataset
+data("combined_data", package = "expodiff")
+
+# Example summary of attending countries
+summary(combined_data$summary_combined)
 ```
 
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this.
 
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
